Adding TetrisAI, Refense, LastResort and Portfolio Site Pages

--- a/html/MoreWork.html
+++ b/html/MoreWork.html
@@ -9,6 +9,26 @@
         <div class="more-work-header-div">
             <p> - Game Programming Projects - </p>
         </div>
+        <div class="more-work-div" onclick="window.location.href='LastResort.html';">
+            <table>
+                <tr>
+                    <td id="Row1">
+                        <img src="../Pictures/LastResort.jpg"></src></td>
+                    <td id="Row2">Last Resort is an online co-op base defense shooter with roguelike elements.</td>
+                    <td id="Row3">Team Size: 29 <br> Time: 27 Weeks (this far) <br> Languages: Blueprints and C++</td>
+                </tr>
+            </table>
+        </div>
+        <div class="more-work-div" onclick="window.location.href='Refense.html';">
+            <table>
+                <tr>
+                    <td id="Row1">
+                        <img src="../Pictures/RefenseLogo.png"></src></td>
+                    <td id="Row2">Refense is a 2D Action game, in which you have to reflect enemy projectiles back at them in order to increase your highscore. Click for more info.</td>
+                    <td id="Row3">Team Size: 1 <br> Time: Around 40 Hours spread over 10 Weeks <br> Languages: C++</td>
+                </tr>
+            </table>
+        </div>
         <div class="more-work-div" onclick="window.location.href='CrowdKing.html';">
             <table>
                 <tr>
@@ -82,23 +102,13 @@
         <div class="more-work-header-div">
             <p> - Other Programming Projects - </p>
         </div>
-        <div class="more-work-div" onclick="window.location.href='';">
+        <div class="more-work-div" onclick="window.location.href='PortfolioWebsite.html';">
             <table>
                 <tr>
                     <td id="Row1">
                         <img src="../Pictures/Portfolio.png"></src></td>
                     <td id="Row2">I created this Portfolio Website myself from Scratch using nothing but HTML5 and CSS. <a href="https://github.com/MartinSchenkel/PortfolioWebsite">Github Link.</a> Click for more info.</td>
                     <td id="Row3">Team Size: 1 <br> Languages: HTML5 and CSS</td>
-                </tr>
-            </table>
-        </div>
-        <div class="more-work-div" onclick="window.location.href='';">
-            <table>
-                <tr>
-                    <td id="Row1">
-                        <img src="../Pictures/webscraper.png"></src></td>
-                    <td id="Row2">I created a Python Webscraper to fetch gamestats of me and my friends so that we can display them on our website. Click for more info.</td>
-                    <td id="Row3">Team Size: 1 <br> Time: 1 Week  <br> Language: Python</td>
                 </tr>
             </table>
         </div>
