--- a/index.html
+++ b/index.html
@@ -62,52 +62,48 @@
                     </div>
                     <div class="card middle">
                         <div class = "front">
-                            <img class = "headimage" src = "Pictures/Empires.JPG">
-                            <h2>Empires</h2>
+                            <img class = "headimage" src = "Pictures/LastResort.jpg">
+                            <h2>Last Resort</h2>
                             <p>
-                                Empires is the name of a project I did during the first year of university. It's a real-time strategy game in space, in which you build ship and explore and conquer other star systems.
-                                It was created for the Raspberry Pi and developed with a given framework in C++.
+                                Last Resort is an online co-op base defense shooter with roguelike elements.
                             </p>
                         </div>
-                        <div class = "back" onclick="window.location.href='html/Empires.html';">
+                        <div class = "back" onclick="window.location.href='html/LastResort.html';">
                             <div class = "back-content middle">
                                 <h3>Languages: </h3>
-                                <p>C++</p>
+                                <p>Blueprints and C++</p>
                                 <h3>Duration: </h3>
-                                <p>8 Weeks</p>
+                                <p>27 Weeks (this far)</p>
                                 <h3>Team Size:</h3>
-                                <p>Solo Project</p>
+                                <p>29 People</p>
                                 <h3>My Responsibilities:</h3>
-                                <p>Gameplay programming, AI programming<br> and UI Programming</p>
-                                <h3>Showcase Video:</h3>
-                                <p><a href = "https://youtu.be/qhMKtv_QTew" target="_blank">Link to the Showcase-Video</a></p>
+                                <p>AI programming</p>
+                                <h3>Steam Page:</h3>
+                                <p><a href="https://store.steampowered.com/app/1491650/Last_Resort/">Link.</a></p>
                             </div>
                         </div>
                     </div>
                     <div class="card middle">
                         <div class = "front">
-                            <img class = "headimage" src = "Pictures/DIY-Hero.JPG">
-                            <h2>DIY Hero</h2>
+                            <img class = "headimage" src = "Pictures/Refense.png">
+                            <h2>Refense</h2>
                             <p>
-                                DIY Hero was a team project at the end of the first year at Breda University of Applied Sciences. It is a third-person game in which a little boy has to fight a tomato.
+                                Refense is a 2D Action game in which you have to reflect the enemy projectiles back at them in order to increase your highscore.
                             </p>
                         </div>
-                        <div class = "back" onclick="window.location.href='html/DIYHero.html';">
+                        <div class = "back" onclick="window.location.href='html/Refense.html';">
                             <div class = "back-content middle">
-                                <h3>Engine: </h3>
-                                <p>Unreal Engine 4</p>
                                 <h3>Languages: </h3>
-                                <p>Blueprints</p>
+                                <p>C++</p>
                                 <h3>Duration: </h3>
-                                <p>8 Weeks</p>
+                                <p>10 Weeks</p>
                                 <h3>Team Size:</h3>
-                                <p>9 People, 2 Designers, 4 Artists, <br> 1 Musician and 2 Programmers</p>
+                                <p>Solo Project</p>
                                 <h3>My Responsibilities:</h3>
-                                <p>Gameplay programming (e.g. Dynamic <br> Camera) </p>
+                                <p>Everything</p>
                                 <h3>Trailer:</h3>
-                                <p><a href = "https://youtu.be/MZ4TVYB_p-Y" target="_blank">Link to the trailer</a></p>
-                                <h3>Notable Achievements:</h3>
-                                <p>This game was featured in the Unreal Engine <br> Student Showcase Spring 2020 </p>
+                                <p><a href = "https://www.youtube.com/watch?v=dXlw67SfYQI" target="_blank">Link to the trailer</a></p>
+                                <p><a href = "https://maddisch.itch.io/Refense" target="_blank">Link to the itch.io page</a></p>
                             </div>
                         </div>
                     </div>
