--- a/html/TetrisAI.html
+++ b/html/TetrisAI.html
@@ -7,47 +7,50 @@
 <body>
     <section class="work-section">
         <div class="work-div">
-            <img src="/Pictures/CrowdKing.png" align="center"></img>
+            <img src="/Pictures/Tetris.JPG" align="center" width="90%"></img>
         </div>
         <div class="work-div">
             <h1> What was the project?</h1>
-            <p> Crowd King was one of my year two project at Breda University of Applied Sciences. It is a cute platformer and available for download on <a href=https://igad.itch.io/crowdking>itch.io</a> </p>
-            <p> I worked on it in a team of 12 People: 1 Producer, 4 Designers, 4 Artists and 3 Programmers </p>
-            <p> We created the game in Unreal Engine using C++ and Blueprints. My responsibilities were Gameplay Programming and making the VFX. More Details below. </p>
+            <p> This was a personal project I did, to learn more about machine learning. I used a genetic algorithm to teach an AI to play Tetris. I made this project from scratch using C++ and SFML for the rendering. I worked on it for around 10 hours not including the time to train the AI in total.</p>
         </div>
         <div class="work-div">
-            <h1> The Trailer </h1>
-            <iframe width="640" height="360" src="https://www.youtube.com/embed/2vPxmQ4hcLo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            <h1> The Showcase </h1>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/yScEzGzCr3c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
             </iframe>
         </div>
         <div class="work-div">
             <h1> What did I learn from the project?</h1>
             <p> 
-                Working in a bigger team like this is always a valuable experience. This was also the first time using C++ for Unreal instead of just blueprints, and while I did not create a huge quantity of things in C++, it did give me a good insight into what has to be done in order to use C++ effectively in Unreal Engine. 
-                <br> 
-                This project was also the first time I ever made or used VFX, so I learned how to use the Unreal Particle Editor, understand the UI surrounding it and what the possibilities for it are. 
+                Before starting working on this project, I learned a lot about Machine Learning, Genetic Algorithms, Deep Learning and Neural Networks.
+            </p>
+            <p>
+                I decided to just use a simple genetic algorithm to teach my AI, as it seemed like a good point to start getting into machine learning and it was sufficient for what I wanted the AI to learn.
             </p>
         </div>
         <div class="work-div">
-            <h1> Creating Temporary Flocking </h1>
-            <img src="/Pictures/CrowdKing.png"> <!-- TODO ADD ACTUAL FAKE FLOCKING GIF-->
-            <p>This is how the "fake flocking" that I quickly created in the beginning looked.</p>
-            <p>In the beginning of the project, my team and I thought that it would be the best experience for the players if the little soldiers that run around the player use Flocking like Boids, as it gives the feeling of organic, intelligent movement. However, we weren't sure if it was feasible for us to create such a complex thing in the small time we had. So, as a Plan B and something that we could already test with before the actual BOIDs would be implemented, I created a small algorithm in C++ that would simulate how the soldiers would feel to the players. It was really simple and quickly done, which was exactly what we wanted. The idea was that every soldier gets assigned an offset for the king which they try to move towards. This felt quite static at first, so I made it that when the King moves the soldiers ignore the offset and just move towards the kings position. This created the feel of the crowd following you dynamically that we were looking for.</p>
-            <img src="/Pictures/CrowdKing.png"> <!-- TODO ADD code sample screenshot GIF-->
+            <h1> The Results </h1>
+            <img src="/Pictures/TetrisAIResults.png" width="100%"> <!-- TODO ADD ACTUAL FAKE FLOCKING GIF-->
+            <p>
+                I made the program print out the score of the best, the worst, the mediocre and average of all genomes. From that data I compiled this graph. 
+            </p>
+            <p>
+                The trend of the graph is going up, with some minor inconsitencies. This was to be expected, as I change the seed of the Tetris Game every generation, as to get an AI that is good at playing Tetris and not one that is good at playing one specific game of Tetris.
+            </p>
+            <p>
+                Unfortunately, the project is very poorly optimized so going through these generations took upwards of 10 hours, which is why I didn't train the AI any further. I am confident that this trend would continue and that my genetic algorithm works, though.
+            </p>
         </div>
         <div class="work-div">
-            <h1>Creating VFX</h1>
-            <img src="/Pictures/CrowdKing.png"> <!-- TODO ADD ACTUAL VFX COMPILATION GIF-->
-            <p>The VFX I created.</p>
-            <p>I had to make sure that the VFX fit our flatshaded artstyle and thus made sure to get frequent feedback from the artists on the team.</p>
-            <p>While I don't think I will be a VFX Artist again in the future, I think I was able to show the flexibility that I bring to a team. I think I am able to pick up many different roles in the team and fulfill them well. I think it's also valuable to know what needs to be done for VFX, how difficult and how important it is. I think my hands-on experience in this field made me a more well-rounded game developer. I think it also helped my communicative abilities as I was forced to communicate more with teammembers I would usually have less contact with.</p>
+            <h1> The genetic alogrithm </h1>
+            <img src="/Pictures/TetrisAICode.png" width="100%"> <!-- TODO ADD ACTUAL VFX COMPILATION GIF-->
+            <p>The genetic algorithm I created.</p>
+            <p>After each generation, I delete the worst half of all genomes. I then use this "makeChild()" function to randomly combine two Genomes and possibly mutate them. </p>
+            <p>Each Genome has 6 Parameters which are used to determine which move it will perform. The AI will evaluate all possible positions of the next piece and then evaluate the board using these parameters, choosing the one that gives the best score. Changing these parameters changes the AI behavior.</p>
         </div>
         <div class="work-div">
-            <h1>Creating the Hazards</h1>
-            <img src="/Pictures/CrowdKing.png"> <!-- TODO ADD ACTUAL Hazard Spline GIF-->
-            <p>Hazard that follows a spline.</p>
-            <p>This was the first time I used Unreal Engines spline tool. I used it so that Designers could easily create more interesting movement patterns for the Hazards than just going back and forwards. </p>
-            <p>I created a lot of different Hazards in Unreal Blueprints, from swinging ones to ones moving back and forward and others following a spline like you see above. The main focus was the challenge for the players and so I made sure to communicate my ideas clear to the designers and check their opinions on what they thought was important and so on. There was also a lot of polishing done when implementing the art assets that I took responsibility on, such as the lawnmowers turning properly when they should turn around.</p>
+            <h1> What would I improve? </h1>
+            <p>There are a lot of things that I did not consider before I started this project, that I realized are crucial to making an AI. Most of all, the Debug AI and the printing of stats and genomes was an afterthought for me. If I was to do a project like this again, I will consider these things much earlier.</p>
+            <p>As mentioned earlier, the project is also poorly optimized. Since each Genome evaluates each position of each piece, it is quite performance intensive and slow. I would try finding a to improve this, possibly using lookup-tables. I would also add a performance mode, where nothing would need to be rendered, which I also did not do. Lastly, I would try to use multithreading to train multiple Genomes at once instead of one after another. </p>
         </div>
     </section>
     
